# LangChain_Guide

./: .env  README.md  pyproject.toml
1_chat_models/: 1_chat_model_basic.py  2_chat_model_basic_conversation.py  4_chat_model_conversation_with_user.py
2_prompt_templates/: 1_prompt_template_basic.py  2_prompt_template_with_chat_model.py
3_chains/: 2_chains_under_the_hood.py
3_chains (LCEL)/: 1_chains_basics.py  4_chains_parallel.py
